<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General">

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="key_silent_mode"
            app:summary="Mute all sounds from this app"
            app:title="Silent Mode" />


        <!--
        <SeekBarPreference
            app:key="keyName"
            app:title="Property Label"
            app:summary="Summary."
            app:max="5"
            app:defaultValue="0" />
            -->

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/pref_header_about">

        <Preference
            app:summary="@string/app_version"
            app:title="@string/title_version" />

        <EditTextPreference
            app:key="@string/key_send_feedback"
            app:summary="@string/summary_support"
            app:title="@string/title_send_feedback"/>


    </PreferenceCategory>



</PreferenceScreen>